@@ -1,0 +1,2 @@
+#define XLAT_ABBREV 1
+#include "times.c"
